--- a/package.json
+++ b/package.json
@@ -4,8 +4,10 @@
   "private": true,
   "dependencies": {
     "@material-ui/core": "^4.5.2",
+    "i18next": "^19.0.0",
     "react": "^16.11.0",
     "react-dom": "^16.11.0",
+    "react-i18next": "^11.0.1",
     "react-redux": "^7.1.1",
     "react-router-dom": "^5.1.2",
     "react-scripts": "3.2.0",
