--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -16,6 +16,5 @@ steps:
   displayName: 'Install Node.js'
 
 - script: |
-    npm install
-    npm run build
-  displayName: 'npm install and build'
+    docker build -t blood-bowl-league-ui
+  displayName: 'build docker container'
