--- a/package.json
+++ b/package.json
@@ -11,7 +11,9 @@
     "react-redux": "^7.1.1",
     "react-router-dom": "^5.1.2",
     "react-scripts": "3.2.0",
-    "redux-saga": "^1.1.1"
+    "redux": "^4.0.4",
+    "redux-saga": "^1.1.1",
+    "typescript": "^3.7.2"
   },
   "scripts": {
     "start": "react-scripts start",
