--- a/package.json
+++ b/package.json
@@ -8,6 +8,7 @@
     "@types/node": "^12.12.14",
     "@types/react": "^16.9.13",
     "@types/react-dom": "^16.9.4",
+    "@types/react-redux": "^7.1.5",
     "i18next": "^19.0.0",
     "i18next-browser-languagedetector": "^4.0.1",
     "react": "^16.11.0",
