--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
     "@types/react": "^16.9.13",
     "@types/react-dom": "^16.9.4",
     "@types/react-redux": "^7.1.5",
+    "@types/react-router-dom": "^5.1.3",
     "i18next": "^19.0.0",
     "i18next-browser-languagedetector": "^4.0.1",
     "react": "^16.11.0",
