--- a/package.json
+++ b/package.json
@@ -26,6 +26,7 @@
     "start": "react-scripts start",
     "build": "react-scripts build",
     "test": "react-scripts test --watchAll=false",
+    "test-ci": "react-scripts test --watchAll=false --collectCoverage=true",
     "eject": "react-scripts eject"
   },
   "eslintConfig": {
