--- a/package.json
+++ b/package.json
@@ -25,7 +25,7 @@
   "scripts": {
     "start": "react-scripts start",
     "build": "react-scripts build",
-    "test": "react-scripts test --watchAll=false",
+    "test": "react-scripts test",
     "test-ci": "react-scripts test --watchAll=false --collectCoverage=true",
     "eject": "react-scripts eject"
   },
