added snapshot tests for rows

--- a/package.json
+++ b/package.json
@@ -51,6 +51,11 @@
     ]
   },
   "devDependencies": {
-    "jest-sonar-reporter": "^2.0.0"
+    "@types/enzyme": "^3.10.4",
+    "@types/react-test-renderer": "^16.9.1",
+    "enzyme": "^3.10.0",
+    "enzyme-adapter-react-16": "^1.15.1",
+    "jest-sonar-reporter": "^2.0.0",
+    "react-test-renderer": "^16.12.0"
   }
 }
