--- a/package.json
+++ b/package.json
@@ -26,7 +26,7 @@
     "start": "react-scripts start",
     "build": "react-scripts build",
     "test": "react-scripts test",
-    "test-ci": "react-scripts test --watchAll=false --collectCoverage=true --env=jsdom --testResultsProcessor=node_modules/jest-sonar-reporter/index.js",
+    "test-ci": "react-scripts test --watchAll=false --collectCoverage=true",
     "eject": "react-scripts eject"
   },
   "jestSonar": {
@@ -52,6 +52,7 @@
   },
   "devDependencies": {
     "@types/enzyme": "^3.10.4",
+    "@types/enzyme-adapter-react-16": "^1.0.5",
     "@types/react-test-renderer": "^16.9.1",
     "enzyme": "^3.10.0",
     "enzyme-adapter-react-16": "^1.15.1",
