--- a/package.json
+++ b/package.json
@@ -26,7 +26,7 @@
     "start": "react-scripts start",
     "build": "react-scripts build",
     "test": "react-scripts test",
-    "test-ci": "react-scripts test --watchAll=false --env=jsdom --collectCoverage=true --collectCoverageFrom=[!**/i18n/**]",
+    "test-ci": "react-scripts test --watchAll=false --env=jsdom --collectCoverage=true --collectCoverageFrom=\"!**/{i18n,__snapshots__}/**\"",
     "eject": "react-scripts eject"
   },
   "jestSonar": {
